# to-serve-man

./: .env.example  .gitignore  .gitmodules  .lighthouserc.json  .pre-commit-config.yaml  README.md  ROADMAP.md  build.py  config.py  footnotes.py  ingredient_ontology.py  ingredients.yaml  package.json  pdf_generator.py  pyproject.toml  recipe_parser.py  requirements.txt  setup.sh  site_generator.py  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml  quality.yml
content/: about.md  hero.md
docs/: index.html  search-data.json
docs/about/: index.html
docs/breakfast/: index.html
docs/cocktails/: index.html
docs/desserts/: index.html
docs/food/: index.html
docs/mains/: index.html
docs/sides/: index.html
latex/: closing.tex  preamble.tex
recipes/: cocktails
recipes/breakfast/: french-toast.cook
recipes/cocktails/: 001-mai-tai.cook  002-zombie.cook  003-daiquiri.cook  004-navy-grog.cook  005-three-dots-and-a-dash.cook  006-jet-pilot.cook  007-saturn.cook  008-hurricane.cook  009-pina-colada.cook  01-mai-tai.cook  010-hemingway-daiquiri.cook  011-cobras-fang.cook  012-suffering-bastard.cook  013-test-pilot.cook  014-hotel-nacional-special.cook  (+243 more)
src/: dom-extras.d.ts  facets.ts  favorites-page.ts  home-page.ts  recipe-app.ts  search.ts  shopping-list-page.ts  util.ts
templates/: about.html  base.html  favorites.html  icons.html  index.html  list.html  listing.html  macros.html  recipe.html  shopping-list.html
tests/: test_footnotes.py  test_ingredient_ontology.py  test_parser.py  test_pdf.py  test_recipes.py  test_snapshots.py
(+104 files in other folders)
